# deephys

./: .gitignore  .gitmodules  README.md  build.json  changelist.md  changelog.md  intel.sh  readthedocs.yaml  run_from_source.sh  setup_project.sh
.github/workflows/: gha-audit.yml  main.yml  toy.yml
docs/: Makefile  make.bat  requirements.txt
docs/source/: MATLAB.rst  api.rst  bugs.rst  changelist.rst  conf.py  contact.rst  contrib.rst  index.rst  pytorch.rst  quickstart.rst  terminology.rst  troubleshooting.rst  usage.rst
docs/source/changelists/: 0.14.1.rst  0.14.2.rst
docs/source/contrib/: app.rst  docs.rst  github.rst  index.rst  instructions.rst  python.rst
docs/source/export/: index.rst  matlab.rst  python.rst  tutorials.rst
docs/source/html/css/: custom.css
docs/source/pip/: api.rst  changelist.rst  index.rst
src/main/kotlin/matt/nn/deephy/: DeephyMain.kt
src/main/kotlin/matt/nn/deephys/: DeephysMain.kt
src/main/python/: README.rst  deephy.py  pyproject.toml
src/main/python/deephy/: __init__.py  deephy.py  deephy_gen_test.py
src/main/python/deephy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/main/python/deephys/: __init__.py  deephys.py
src/main/python/deephys.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/main/python/nndeephys/: __init__.py  nndeephys.py
src/main/resources/: changelist.md  deephys.css  logo.icns
src/main/resources/matt/: appname.txt  modID.json  values.json
src/test/python/: test.py
web/: .gitignore  build.json
web/src/jsMain/kotlin/: web.kt
(+97 files in other folders)
