[project]
name = "deephys"
version = "0.11.0"
authors = [
    { name = "Matt Groth", email = "mjgroth@mit.edu" }
]
dependencies = [
    'cbor2',
    'numpy',
    'torch',
    'tqdm'
]
[project.urls]
"Homepage" = "https://github.com/mgroth0/deephys"
"Documentation" = "https://matt-groth-deephys.readthedocs-hosted.com/en/latest/"
"Bug Tracker" = "https://deephys.youtrack.cloud/"