[project]
name = "deephys"
version = "0.12.1"
authors = [
    { name = "Matt Groth", email = "mjgroth@mit.edu" }
]
dependencies = [
    'cbor2',
    'numpy',
    'tqdm'
]
description = "Library to export neural activity to a Deephys-compatible format"
[project.urls]
"Homepage" = "https://deephys.org"
"Documentation" = "https://deephys.readthedocs.io/en/latest/"
"Bug Tracker" = "https://deephys.youtrack.cloud/"